Meeting-plans, my-meeting, css ve jsde degisiksikler yapildi

--- a/my-meeting.html
+++ b/my-meeting.html
@@ -170,7 +170,7 @@
                     <h1>Selam, <span>Onur.</span></h1>
                     <p>İlk toplantını oluşturmak için her şey hazır! </p>
                 </div>
-                <div class="contact-box2 mb-4">
+                <div class="contact-box2">
                     <div class="my-meeting-toptitle align-items-center">
                         <div class="my-meeting-head-left">
                             <a href="#anlik" class="btn-buy2 active">Anlık</a>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="contact-box my-meeting">
                         <div class="row g-0">
-                            <div class="col-xl-2 col-md-3 col-13">
+                            <div class="col-md-2 col-12">
                                 <div class="meeting-box-img">
                                     <div class="p-box-img">
                                         <img src="img/gizem.png" alt="">
@@ -327,7 +327,7 @@
                                     <div class="p-box-name">Gizem Demir</div>
                                 </div>
                             </div>
-                            <div class="col-xl-10 col-md-9 col-12">
+                            <div class="col-md-10 col-12">
                                 <div class="meeting-box-content">
                                     <div class="meeting-box-content-title">
                                         <h1 class="mb-2">May Siber Teknoloji Tanışması Toplantısı</h1>
