--- a/meeting-plans.html
+++ b/meeting-plans.html
@@ -223,7 +223,7 @@
                                 <div class="password-title user-invite-title mb-0">Şifre Korumalı</div>
                             </div>
                             <div class="col-sm-9 col-md-10 col-12 d-xl-flex align-items-center">
-                                <div class="password-guard-check me-sm-5 d-xl-flex align-items-center">
+                                <div class="password-guard-check me-sm-5 align-items-center">
                                     <div class="label-control label-x d-flex align-items-center">
                                         <label for="psw_btn" data-name="psw_no" class="psw-no">Hayır</label>
                                         <input type="checkbox" class="switch_1 switch_x switch_btn" id="psw_btn">
@@ -242,13 +242,13 @@
                     </div>
                     <div class="moderator-management">
                         <div class="moderator-title user-invite-title">Moderasyon Yönetimi</div>
-                        <button type="button" class="btn-buy2 me-xl-5" data-tabx="danisilsin">Danışılsın</button>
-                        <button type="button" class="btn-buy2 me-xl-5" data-tabx="danisilmasin">Danışılmasın</button>
+                        <button type="button" class="btn-buy2 me-xl-5 me-md-3" data-tabx="danisilsin">Danışılsın</button>
+                        <button type="button" class="btn-buy2 me-xl-5 me-md-3" data-tabx="danisilmasin">Danışılmasın</button>
                         <button type="button" class="btn-buy2" data-tabx="yonetici">Yönetici Karar Versin</button>
                     </div>
                     <div class="camera-auto row g-0 align-items-center">
-                        <div class="camera-title user-invite-title col-sm-2 mb-0">Kamera Paylaşımları <br> Otomatik Başlasın</div>
-                        <div class="label-control label-xc d-flex align-items-center col-sm-10">
+                        <div class="camera-title user-invite-title col-sm-3 col-md-2 col-5 mb-0">Kamera Paylaşımları <br> Otomatik Başlasın</div>
+                        <div class="label-control label-xc d-flex align-items-center col-sm-9 col-md-10 col-7 ps-xl-0 ps-sm-0 ps-3">
                             <label for="camera_btn" data-name="camera_yes" class="camera-no">Hayır</label>
                             <input type="checkbox" class="switch_1 switch_y" id="camera_btn">
                             <label for="camera_btn" data-name="camera_yes" class="camera-yes">Evet</label>
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="meeting-plans-btn">
-                        <a href="#" class="btn-buy2 btn-bg-blue me-xl-4">Toplantı Planla</a>   
+                        <a href="#" class="btn-buy2 btn-bg-blue me-4">Toplantı Planla</a>   
                         <a href="#" class="btn-buy2 ">İptal Et</a>   
                     </div>
                 </div>
