Son güncellemeler ve ekstra sayfalar

--- a/packets-path.html
+++ b/packets-path.html
@@ -25,7 +25,7 @@
         </header>
 
         <main class="main">
-            <div class="meeting-plans-wrapper tabs pb-5">
+            <div class="meeting-plans-wrapper pb-5">
                 <div class="my-account-title setting-title mb-md-5 mb-4">
                     <div class="packet-path-all d-flex align-items-center">
                         <div class="packet-path">
@@ -78,7 +78,7 @@
                                     </div>
                                     <div class="path-popup-btn">
                                         <a href="#" class="btn-buy2 d-block btn-bg-blue pt-3 pb-3 mb-3 ">Ödeme İşlemine Geç</a>
-                                        <a href="#" class="btn-buy2 d-block pt-3 pb-3">Seçilen Ürünleri Paylaş</a>
+                                        <a href="#" class="btn-buy2 d-block pt-3 pb-3 path-share">Seçilen Ürünleri Paylaş</a>
                                     </div>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="account-content">
                     <div class="account-packets-hide">
-                        <div id="ek_alim">
+                        <div id="ek_a">
                             <div class="extra-buy">
                                 <div class="extra-room">
                                         <div class="extra-buy-title owned-span">
@@ -305,6 +305,34 @@
         </main>
     </div>    
 
+
+
+    <div class="detail-popup path-pp2">
+        <div class="calendar-popup-content path-popup">
+            <div class="path-popup-title">Seçilen Ürünler</div>
+            <div class="path-popup-flex d-flex align-items-center justify-content-between">
+                <div class="path-popup-item"><div class="pp-tt">Business</div></div>
+                <div class="path-popup-item"><div><b>₺69</b> Aylık</div></div>
+            </div>
+            <div class="path-popup-flex d-flex align-items-center justify-content-between">
+                <div class="path-popup-item"><div class="pp-tt">Konferans Katılımcısı<span>(25)</span></div></div>
+                <div class="path-popup-item"><div><b>₺29</b> Aylık</div></div>
+            </div>
+            <div class="path-popup-flex x d-flex align-items-center justify-content-between">
+                <div class="path-popup-item"><div class="pp-tt">Ek Kayıt Alanı<span>(50GB)</span></div></div>
+                <div class="path-popup-item"><div><b>₺400</b> Aylık</div></div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between mb-4">
+                <div class="pp-tt">Genel Toplam</div>
+                <div class="px-t"><b>₺498</b> Aylık</div>
+            </div>
+            <div class="meeting-box-meeting-link d-flex align-items-center">
+                <a href="" class="meeting-link">http://vimesoft.com//759491938</a>
+                <span class="copy-link ps-2"><img src="img/icon7.svg" alt=""></span>
+            </div>            
+        </div>
+        <div class="calendar-popup"></div>
+    </div>
 
 
     <footer class="footer">
