--- a/my-account-2.html
+++ b/my-account-2.html
@@ -167,11 +167,8 @@
         <main class="main">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="my-account-title setting-title mb-md-5 mb-4 row g-0 align-items-center justify-content-between">
-                    <div class="col-md-6 col-12 d-flex align-items-center">
+                    <div class="col-md-6 col-12">
                         <h1>Hesabım</h1>
-                        <div class="card-head-right card-ticket2 ms-3">
-                            <span>Ücretsiz Deneme</span>
-                        </div>
                     </div>
                     <div class="col-md-6 col-12 text-md-center">
                         <a href="#" class="btn-subs pt-md-3 pt-2 pb-md-3 pb-2 hover-bg me-4">Hesap Detayları</a>
