--- a/my-meeting2.html
+++ b/my-meeting2.html
@@ -164,13 +164,13 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main my-meeting-2">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="user-panel-title">
                     <h1>Selam, <span>Onur.</span></h1>
                     <p>Tüm toplantılarını takip et!</p>
                 </div>
-                <div class="contact-box2">
+                <div class="contact-box2 ">
                     <div class="my-meeting-toptitle align-items-center">
                         <div class="my-meeting-head-left">
                             <a href="#anlik" class="btn-buy2 active">Anlık</a>
