--- a/my-account-packets.html
+++ b/my-account-packets.html
@@ -181,7 +181,7 @@
                 <div class="account-content">
                     <div class=" acc-slide">
                         <div class="row g-0">
-                            <div class="col-xl-3 col-12 pe-3 ps-3">
+                            <div class="col-xl-3">
                                 <div class="account-pic-line">
                                     <div class="account-pic mb-4">
                                         <img src="img/profil-pic.png" alt="">
@@ -202,7 +202,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-9 col-12 pe-3 ps-3">
+                            <div class="col-xl-9">
                                 <div class="account-packets-hide">
                                     <div class="tab-system">
                                         <div class="sss-head pb-3">
