--- a/my-account-2.html
+++ b/my-account-2.html
@@ -167,7 +167,7 @@
         <main class="main">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="my-account-title setting-title mb-md-5 mb-4 row g-0 align-items-center justify-content-between">
-                    <div class="col-md-6 col-12">
+                    <div class="col-md-6 col-12 mb-md-0 mb-2">
                         <h1>Hesabım</h1>
                     </div>
                     <div class="col-md-6 col-12 text-md-center">
