--- a/my-meeting.html
+++ b/my-meeting.html
@@ -304,7 +304,7 @@
                                                 </div>
                                             </div>
                                             <div class="invite-personal-item">
-                                                <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                <a href="#" class="btn-buy2 my_btn pt-2 pb-2">+99 Daha Fazla</a>
                                             </div>
                                         </div>
                                         <div class="meeting-box-content-btns">
@@ -408,7 +408,7 @@
                                                 </div>
                                             </div>
                                             <div class="invite-personal-item">
-                                                <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                <a href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                             </div>
                                         </div>
                                         <div class="meeting-box-content-btns">
@@ -475,7 +475,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a  href="#" class="btn-buy2 my_btn pt-2 pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -548,7 +548,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a  href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -613,7 +613,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -678,7 +678,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -743,7 +743,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a  href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -808,7 +808,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="invite-personal-item">
-                                                    <a href="" class="btn-buy2 pt-2 pb-2">+99 Daha Fazla</a>
+                                                    <a href="#" class="btn-buy2 pt-2 my_btn pb-2">+99 Daha Fazla</a>
                                                 </div>
                                             </div>
                                             <div class="meeting-box-content-btns">
@@ -891,6 +891,144 @@
             <h3 class="mb-5">Takvimi Paylaş</h3>
             <a href="#" class="btn-cancel pt-3 pb-3 mb-3">Google Calendar ile Paylaş</a>
             <a href="#" class="btn-cancel pt-3 pb-3">Outlook Calendar ile Paylaş</a>
+        </div>
+        <div class="calendar-popup"></div>
+    </div>
+    
+
+    <div id="myModal" class="personal-popup">
+        
+    </div>
+
+    <div class="acc-packets2-popup2">
+        <div class="calendar-popup-content packets2-popup">
+            <div class="personal-popup-head m-0">
+                <div class="personal-popup-title">Katılımcılar <span>(99)</span></div>
+                <div class="personal-popup-search-box">
+                    <div class="personal-popup-search">
+                        <div class="personal-popup-search-item w-100">
+                            <input type="search" placeholder="Katılımcı Ara">
+                            <span class="personal-popup-search-icon">
+                                <img src="img/search.svg" alt="">
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="personal-popup-content m-0">
+                <div class="personal-popup-content-wrapper">
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/gizem.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Gizem Demir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/burak.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Burak Koç
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/mehmet.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Mehmet Yılmaz
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-popup-item d-flex align-items-center justify-content-between">
+                        <div class="personal-item d-flex align-items-center">
+                            <div class="personal-img sticky-profil">
+                                <img src="img/user-avatar-filled.png" alt="">
+                            </div>
+                            <div class="personal-name">
+                                Bilge Bilir
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="calendar-popup"></div>
     </div>
@@ -997,5 +1135,15 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src='https://cdn.jsdelivr.net/jquery.selectric/1.11.1/jquery.selectric.min.js'></script>
     <script src="js/script.js"></script>
+    <script>
+        $('.my_btn').on('click', function(e) {
+            e.preventDefault();
+            $('.acc-packets2-popup2').toggleClass('active');
+        });
+        $('.calendar-popup').on('click', function(e) {
+            e.preventDefault();
+            $('.acc-packets2-popup2').removeClass('active');
+        });
+    </script>
 </body>
 </html>
