--- a/my-account.html
+++ b/my-account.html
@@ -167,7 +167,7 @@
         <main class="main">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="my-account-title setting-title mb-md-5 mb-4 row g-0 align-items-center justify-content-between">
-                    <div class="col-md-6 col-12 d-flex align-items-center">
+                    <div class="col-md-6 col-12 d-flex align-items-center mb-md-0 mb-2">
                         <h1>Hesabım</h1>
                         <div class="card-head-right card-ticket2 ms-3">
                             <span>Ücretsiz Deneme</span>
