Vue & Front mix

--- a/settings-2.html
+++ b/settings-2.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<!-- Css Style -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-    	
+    <script src="js/script.js"></script>
+
 </head>
 <body>
 
