Revize-2 sayfalarındaki bazı güncellemeler

--- a/error-payment.html
+++ b/error-payment.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9 col-12 pt-4 pb-4">
+                <div class="col-xl-9  pt-4 pb-4 meeting-sccw">
                     <div class="success-payment error-payment mb-5">
                         <div class="success-payment-head">
                             <img src="img/error-icon.svg" alt="">
