--- a/settings-2.html
+++ b/settings-2.html
@@ -164,7 +164,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main settings">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="setting-title mb-md-5 mb-4 d-md-flex align-items-center justify-content-between">
                     <h1>Ayarlar</h1>
@@ -279,7 +279,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="setting-tab-item d-flex align-items-center justify-content-between">
+                                <div class="setting-tab-item d-flex flex-wrap align-items-center justify-content-between">
                                     <div class="setting-item-text setting-text">Toplantı Kayıtları Silinsin</div>
                                     <div class="meeting-record-delete">
                                         <div class="time-period-plans ">
