--- a/settings.html
+++ b/settings.html
@@ -164,7 +164,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main settings">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="setting-title mb-md-5 mb-4 d-md-flex align-items-center justify-content-between">
                     <h1>Ayarlar</h1>
@@ -219,7 +219,7 @@
                                     </div>
                                 </div>
                                 <div class="setting-tab-item">
-                                    <div class="time-period-plans  me-xl-4">
+                                    <div class="time-period-plans">
                                         <label class="spe-select">
                                             <select class="selectric-select" id="nicer-select-id" name="mySelect" reqiured>
                                                 <option value=""></option>
@@ -257,6 +257,12 @@
                                             <input type="checkbox" class="switch_1 switch_y" disabled="disabled" id="b_item">
                                             <label for="b_item" class="camera-yes">Evet</label>
                                         </div>
+                                        <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="setting-tab-item d-flex align-items-center justify-content-between">
@@ -266,6 +272,12 @@
                                             <label for="c_item" class="camera-no">Hayır</label>
                                             <input type="checkbox" class="switch_1 switch_y" disabled="disabled" id="c_item">
                                             <label for="c_item" class="camera-yes">Evet</label>
+                                        </div>
+                                        <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -277,6 +289,12 @@
                                             <input type="checkbox" class="switch_1 switch_y" disabled="disabled" id="d_item">
                                             <label for="d_item" class="camera-yes">Evet</label>
                                         </div>
+                                        <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="setting-tab-item d-flex align-items-center justify-content-between">
@@ -286,6 +304,12 @@
                                             <label for="e_item" class="camera-no">Hayır</label>
                                             <input type="checkbox" class="switch_1 switch_y" disabled="disabled" id="e_item">
                                             <label for="e_item" class="camera-yes">Evet</label>
+                                        </div>
+                                        <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
