--- a/success-payment.html
+++ b/success-payment.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9 col-12 pt-4 pb-4">
+                <div class="col-xl-9 pt-4 pb-4 meeting-sccw">
                     <div class="success-payment mb-5">
                         <div class="success-payment-head">
                             <img src="img/bxs-like.svg" alt="">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="row g-0 align-items-center justify-content-between">
                         <div class="col-md-6 col-12">
-                            <div class="meeting-span-text mb-0">
+                            <div class="meeting-span-text mb-md-0 mb-3">
                                 Ödemeniz başarılı şekilde alındı. Artık hazırsınız. İlk toplantınızı oluşturabilir, ekibinizi kurabilirsiniz.
                             </div>
                         </div>
