--- a/unplanned-meeting.html
+++ b/unplanned-meeting.html
@@ -164,7 +164,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main unp-meeting">
             <div class="join-conf-wrapper">
                 <div class="user-panel-title">
                     <h1>Hoşgeldin, <span>Onur.</span></h1>
@@ -174,13 +174,13 @@
                     <div class="meeting-box-content-title  pb-3">
                         <h1 class="mb-2">Planlanmış bir toplantınız bulunmamaktadır.</h1>
                     </div>
-                    <div class="pb-5">
+                    <div class="pb-lg-5 pb-4">
                         <a href="#" class="btn-buy-xl2 me-xl-4 me-0 meeting-btn new-form-input">Toplantı Planla</a>
                         <a href="#" class="btn-buy-xl me-xl-4 me-0 meeting-btn new-form-input">Toplantıya Başla</a>
                         <a href="#" class="btn-buy-xl meeting-btn new-form-input">Toplantıya Katıl</a>
                     </div>
                     <div class="meeting-adress pb-5">
-                        Kişisel Toplantı Adresim: <a href="#">http://vimesoft.com//285205328</a> <span class="ps-2 copy-link"><img src="img/icon7.svg"></span>
+                        Kişisel Toplantı Adresim: <a href="http://vimesoft.com//285205328">Link</a> <span class="ps-2 copy-link"><img src="img/icon7.svg"></span>
                     </div>
                 </div>
             </div>
